# porticxx-utils

./: .gitignore  meson.build
cross/: wasm-ld-wrapper  wasm32-stubs.ini  x86_64.ini
shell/: meson.build
shell/src/: ast.hpp  main.cpp  parser.hpp  rules.hpp  token.hpp  tokens.hpp
shell/src/applets/: applets.cpp  applets.hpp  cd.cpp  exit.cpp  ls.cpp
subprojects/: porticxx.wrap
